tests/neg/this-toplevel-cc.check
-- Error: tests/neg/this-toplevel-cc.scala:7:15 ------------------------------------------------------------------------
7 |  val f: File^{this} = ??? // error
  |               ^^^^
  |               Top-level definitions cannot refer to this
